[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/go3v2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menu/settings_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/board/marble-board.png" type="Texture" id=3]
[ext_resource path="res://assets/pieces/knight/image_part_032.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/NotoSerifTC-Bold.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/NotoSerifTC-SemiBold.otf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 12
font_data = ExtResource( 6 )

[node name="settings_menu" type="ColorRect"]
margin_left = 80.0
margin_top = 300.0
margin_right = 930.0
margin_bottom = 650.0
theme = SubResource( 2 )
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="piece_label" type="Label" parent="."]
margin_left = 41.104
margin_top = 21.3268
margin_right = 131.104
margin_bottom = 40.3268
text = "Piece Style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board_label" type="Label" parent="."]
margin_left = 33.665
margin_top = 191.743
margin_right = 128.665
margin_bottom = 210.743
text = "Board Style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="piece_style" type="OptionButton" parent="."]
margin_left = 35.4355
margin_top = 45.0684
margin_right = 159.436
margin_bottom = 70.0684
text = "Piece Style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board_style" type="OptionButton" parent="."]
margin_left = 29.9531
margin_top = 216.812
margin_right = 153.953
margin_bottom = 241.812
text = "board style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="piece_preview" type="TextureRect" parent="."]
margin_left = 188.111
margin_top = 12.0547
margin_right = 252.111
margin_bottom = 76.0547
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="board_preview" type="TextureRect" parent="."]
margin_left = 191.532
margin_top = 129.178
margin_right = 391.532
margin_bottom = 329.178
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -61.0
margin_bottom = 25.0
text = "Close"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 450.0
margin_top = 40.0
margin_right = 800.0
margin_bottom = 220.0
custom_fonts/normal_font = SubResource( 3 )
text = "Three Kingdoms Chess is an asymmetrical 1v2 board game.
Blue controls the north. Red and Green are allies in the southwest and southeast.
First team to secure a checkmate wins.

"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="Label" parent="."]
margin_left = 450.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 340.0
custom_fonts/font = SubResource( 4 )
text = "Programming, Art, and Music by
Jack Anderson

Additional CC0 assets from:
kenney.nl
opengameart.org
pexels.com"
align = 1
